k8s/gestion_cours-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestion_cours
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gestion_cours
  template:
    metadata:
      labels:
        app: gestion_cours
    spec:
      containers:
        - name: gestion_cours
          image: gestion_cours:latest
          ports:
            - containerPort: 8083
