k8s/gestion_emploi_du_temps-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestion-emploi-du-temps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gestion-emploi-du-temps
  template:
    metadata:
      labels:
        app: gestion-emploi-du-temps
    spec:
      containers:
        - name: gestion-emploi-du-temps
          image: gestion-emploi-du-temps:latest
          ports:
            - containerPort: 8081
