k8s/gestion_etudiant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestion_etudiant
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gestion_etudiant
  template:
    metadata:
      labels:
        app: gestion_etudiant
    spec:
      containers:
        - name: gestion_etudiant
          image: gestion_etudiant:latest
          ports:
            - containerPort: 8081
