k8s/gestion_professeurs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestion_professeurs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gestion_professeurs
  template:
    metadata:
      labels:
        app: gestion_professeurs
    spec:
      containers:
        - name: gestion_professeurs
          image: gestion_professeurs:latest
          ports:
            - containerPort: 8082
