k8s/gestion_cours-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestion_cours-service
spec:
  selector:
    app: gestion_cours
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
  type: ClusterIP
