k8s/gestion_etudiant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestion_etudiant-service
spec:
  selector:
    app: gestion_etudiant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
