k8s/gestion_professeurs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestion_professeurs-service
spec:
  selector:
    app: gestion_professeurs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
